# lebse

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MODEL_CARD.md  PAPER.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/lebse/: __init__.py  db.py  eval.py  eval_pairs.py  metrics.py  model.py  sql.py  text.py  train.py  train_citation.py
tests/: test_api.py  test_eval_pairs.py  test_metrics.py  test_sql.py  test_text.py
